# SmartExtract-PDF

./: .gitignore  AI-OCR機能について.md  README.md  ai機能について.md  compose.yml  dev.sh
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
.devcontainer/db/: Dockerfile
.devcontainer/db/sql/: schema.sql
client/: biome.json  index.html  package.json  vite.config.ts
client/src/: App.tsx  index.css  main.tsx
client/src/components/: BottomBar.tsx  ChatPanel.tsx  ExportMdButton.tsx  LLMSettingsSheet.tsx  Layout.tsx  LeftSidebar.tsx  OcrTextLayer.tsx  PdfAppLayout.tsx  PdfImageToolbar.tsx  PdfViewer.tsx  RightSidebar.tsx  SelectionOverlay.tsx  SettingsSheet.tsx  ThemeToggle.tsx  TocPanel.tsx
client/src/components/ui/: accordion.tsx  alert-dialog.tsx  button.tsx  chatAccordion.tsx  sonner.tsx
client/src/contexts/: PdfSidebarContext.tsx
client/src/lib/: autoSelection.ts  ocrCache.ts  ocrQueue.ts  ocrWorkerClient.ts  pdfImage.ts  pdfToc.ts  readingOrder.ts  rectUtils.ts  utils.ts
client/src/lib/ndlocr/: deim.ts  ndlParser.ts  parseq.ts
client/src/pages/: HomePage.tsx  PdfViewPage.tsx
client/src/plugins/: toolbarSyncPlugin.tsx
client/src/stores/: apiKeyStore.ts  chatImageStore.ts  chatSessionStore.ts  pdfViewerStore.ts  themeStore.ts
client/src/types/: toc.ts
client/src/workers/: ndlocr.worker.ts
server/: .env.example  pyproject.toml
server/app/: __init__.py  config.py  db.py  main.py
server/app/routers/: chat.py  pdfs.py  settings.py
server/app/schemas/: __init__.py  chat.py  llm.py  pdf.py  toc.py
server/app/services/: llm.py  toc.py
