[project]
name = "pdf-llm-chat-server"
version = "0.1.0"
description = "FastAPI server for PDF × LLM Chat Web App"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "litellm>=1.55.0",
    "pydantic-settings>=2.0.0",
    "pydantic>=2.0.0",
    "aiofiles>=24.1.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
]
